--- a/src/App.css
+++ b/src/App.css
@@ -22,6 +22,20 @@
   color: #61dafb;
 }
 
+.selectedPoll {
+  color: blue;
+  font-weight: bolder;
+}
+
+
+.selectedFilter {
+  background: lightblue;
+}
+
+img {
+  height: 70px;
+}
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
